# aero-hand-open

./: .gitattributes  .gitignore  LICENSE.md  README.md  hand_sim.md  mechanical.md  teleop.md
docs/: assembly.md  firmware.md  getting_started.md  hand_sim.md  hardware_setup.md  intro.md  mechanical.md  pcb.md  ros2_comm.md  sdk.md
firmware/: .gitrepo
firmware/main/: Homing.cpp  firmware_v0.1.0.ino
hardware/: .gitrepo  README.md
hardware/Assembly/: BOM.csv
hardware/PCB/Aero_hand_open_boarda/: Aero_hand_open_boarda.kicad_pcb  Aero_hand_open_boarda.kicad_prl  Aero_hand_open_boarda.kicad_pro  Aero_hand_open_boarda.kicad_sch  Aero_hand_open_boarda.step  PCB BOM - BoardA_BOM.csv  PCB BOM - BoardA_CPL.csv
hardware/PCB/Aero_hand_open_boardb/: Aero_hand_open_boardb.kicad_pcb  Aero_hand_open_boardb.kicad_prl  Aero_hand_open_boardb.kicad_pro  Aero_hand_open_boardb.kicad_sch  PCB BOM - BoardB_BOM.csv  PCB BOM - BoardB_CPL.csv  _autosave-Aero_hand_open_boardb.kicad_prl
hardware/PCB/Components/3pin jst step file/: S3P-VH-LF--SN---3DModel-STEP-56544.STEP
ros2/: .gitignore  .gitrepo  README.md
ros2/src/aero_hand_open_rl/: README.md
ros2/src/aero_hand_open_teleop/: README.md  package.xml  setup.cfg  setup.py
ros2/src/aero_hand_open_teleop/aero_hand_open_teleop/: manus_joint_states_retargeting.py  mediapipe_mocap.py  mediapipe_retargeting.py
ros2/src/aero_hand_open_teleop/aero_hand_open_teleop/utils/: load_normalize_config.py  normalize.py
ros2/src/aero_hand_open_teleop/launch/: manus_teleop.launch.py
ros2/src/manus_glove_pkg/: README.md
sdk/: .gitrepo
(+8 files in other folders)
